Fixed the layout issue for host and files (#4459)

--- a/investigate-files/app/styles/investigate-files/files/_manifest.scss
+++ b/investigate-files/app/styles/investigate-files/files/_manifest.scss
@@ -317,6 +317,7 @@ page.investigate-files-engine {
 
 .license-banner.shown + .files-route {
   height: calc(100vh - 126px);
+  width: 100%;
   .content-body {
     height: calc(100vh - 296px);
   }
