--- a/investigate-hosts/app/styles/investigate-hosts/_manifest.scss
+++ b/investigate-hosts/app/styles/investigate-hosts/_manifest.scss
@@ -61,4 +61,5 @@
 
 .license-banner.shown + .hosts-route {
   height: calc(100vh - 126px);
+  width: 100%;
 }
