--- a/investigate-hosts/app/styles/investigate-hosts/components/host-list/_manifest.scss
+++ b/investigate-hosts/app/styles/investigate-hosts/components/host-list/_manifest.scss
@@ -45,11 +45,6 @@ $filter-panel-width: 250px;
     }
   }
 
-  .machine-zone {
-    min-height: calc(100vh - 160px);
-    height: 100vh;
-  }
-
   .favourite-filters {
     padding: rsa-whitespace() 0 rsa-whitespace() rsa-whitespace();
   }
